[package]
authors = ["Stephan Sokolow"]
categories = ["command-line-utilities"]
keywords = ["nvidia", "apt", "update", "defer", "ubuntu"]
description = "Helper to defer nVidia driver updates until restart on APT-based systems"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "update_nvidia"
repository = "https://github.com/ssokolow/update_nvidia"
version = "0.1.0"

[dependencies]

[profile.release]
lto = true
codegen-units = 1

# Disable building debug info and strip std debug symbols to speed up linking.
# Backtraces will still work as long as you don't strip="symbols"/strip=true
#
# Source: https://davidlattimore.github.io/working-on-rust-iteration-time.html
strip="debuginfo"

[profile.dev]
# Build the project itself with just enough optimization to smooth out the
# most egregious of the abstractions which are only zero-cost when optimized
opt-level = 1

# Disable building debug info and strip std debug symbols to speed up linking.
# Backtraces will still work as long as you don't strip="symbols"/strip=true
#
# Source: https://davidlattimore.github.io/working-on-rust-iteration-time.html
debug = 0
strip="debuginfo"
